Add ability to select which transactions/samplers are included in report through regex (#181)
* Add filtering with regex

* Modify expected text in job log as I changed logging.
Modify test a bit to make failure cause more clear, had to scratch my
head a bit to understand

* Log additional information

* Finalize
Add logging
Test

* Finalize
Test

* Mention author and sponsor

* Take into account Artem notes (at least what I thing is the problem)

* Take into account Artem notes (at least what I thing is the problem)

* Take into account Artem note

* Update description to base it on what's in pom

* Rename help file so that it is used by Jenkins

* Fix codacy bug

* Fix codacy bugs

* Fix codacy warnings:

- Fields should be declared at the top of the class
- Silent error catching
- SimpleDateFormat is not thread safe, make it local

* Use constants for repeated String * and now
Use try with resources
Throw IllegalArgumentException instead of generic RuntimeException
Position literal first in String comparisons
Drop useless casts

* Use IllegalArgumentException instead of NPE
Drop useless continue
Add missing break in switch

* Use try with resources

* Use explicite scoping

* Fix compilation error

* Replace statsDateFormat by static final field
Use try with resources
Replace RuntimeException by IllegalArgumentException or
IllegalStateException
Drop Hashtable in favor of Hashmap since it is already synchronized
Iterate more efficiently on Map

* Respect naming convention
Factor common code
Fix issue in throughput parsing

* Drop unused import

* return immediately
Add default to switch and simplify code of check
Use %n instead of \n in String.format

* Add default in switch
Use StringBuilder instead of StringBuffer
Remove useless exceptions in throws clause
Use tyy with resources
Use Diamond constructor

* Position literals first in String comparison

* Use diamond operator
Avoid poten